// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accordeon Doesn't render non AccordeonItem items 1`] = `
<div
  className="m-accordion"
>
  <div
    className="m-accordion__tab is"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 1
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
  <div
    className="m-accordion__tab is-open"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 2
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`accordeon Renders accordeon 1`] = `
<div
  className="m-accordion"
>
  <div
    className="m-accordion__tab is-open"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 1
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
  <div
    className="m-accordion__tab is"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 2
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
  <div
    className="m-accordion__tab is"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 3
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`accordeon Renders accordeon with active index 1`] = `
<div
  className="m-accordion"
>
  <div
    className="m-accordion__tab is"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 1
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
  <div
    className="m-accordion__tab is-open"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 2
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
  <div
    className="m-accordion__tab is"
  >
    <div
      className="m-accordion__header"
      onClick={[Function]}
    >
      Acc 3
    </div>
    <div
      className="m-accordion__content"
    >
      <div
        className="u-margin"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`accordeon Renders accordeon without items 1`] = `
<div
  className="m-accordion"
/>
`;
